--- a/app/Resources/views/admin/bookings/edit.html.twig
+++ b/app/Resources/views/admin/bookings/edit.html.twig
@@ -60,7 +60,15 @@
                             <div class="form-group">
                                 <label class="col-sm-12 control-label" for="booking_adults">Adults</label>
                                 <div class="col-sm-12">
-                                    <input type="number" class="form-control" id="booking_adults"  name="booking[adults]" value="{{ booking.adults }}">
+                                    <select class="form-control" id="booking_adults" name="booking[adults]">
+                                        {% for i in 1..booking.category.beds %}
+                                            {% if (i == booking.adults)  %}
+                                                <option selected="selected" value="{{ i }}">{{ i }}</option>
+                                            {% else %}
+                                                <option value="{{ i }}">{{ i }}</option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
                                 </div>
                             </div>
                             <div class="form-group">
